Superset/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: superset-ingress-route
  namespace: superset
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: superset-tls
  routes:
    - match: Host(`superset.home.local`)
      kind: Rule
      services:
        - name: my-superset
          port: 8088
